welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:1: error: not found: value setCouleur
def fleur(c:Color){setCouleur(c);baisseBrosse();avance();avance();avance();recule();gauche();avance();recule();recule();setCouleurBrosse(Color.YELLOW);avance();droite();leveBrosse()}
                   ^